[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/EmpezarPressed.png" type="Texture" id=2]
[ext_resource path="res://assets/EmpezarHover.png" type="Texture" id=3]
[ext_resource path="res://Fonts/heartbit2x.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/ui/slider.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ui/slider_content.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ui/slider_arrow2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/ui/slider_arrow1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/ui/test_button/test_button1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/ui/test_button/test_button2.png" type="Texture" id=10]
[ext_resource path="res://Sounds/bell_ding.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/PantallaInicio.png" type="Texture" id=12]
[ext_resource path="res://assets/Empezar.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )
expand_margin_right = 8.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -322.091
margin_top = 139.589
margin_right = -10.0908
margin_bottom = 197.589
custom_fonts/font = ExtResource( 4 )
text = "Probar Sonido"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Button"]
stream = ExtResource( 11 )

[node name="Start_Button" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -566.679
margin_top = -231.421
margin_right = -10.6787
margin_bottom = -77.4207
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -236.699
margin_top = 66.3496
margin_right = -180.699
margin_bottom = 82.3496
rect_scale = Vector2( 4, 4 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -142.224
margin_right = -10.2236
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "sonido"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -70.0
margin_right = 232.0
margin_bottom = -18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "controles: flechas/wasd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -119.398
margin_top = 150.0
margin_right = -71.3983
margin_bottom = 168.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TextureButton"]
stream = ExtResource( 11 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="Start_Button" to="." method="_on_Start_Button_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
